--- a/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
+++ b/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
@@ -1060,7 +1060,7 @@ APPROVED THIS CERTIFICATE AS A VALID LEGAL DOCUMENT FOR ALL OFFICIAL PURPOSES".
 													<tr>
                                                             <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 															<td align="left" valign="top">
-                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https:/03.qrcodechiebf642c14f64e5/fm/ctrr77rssaee.pdf?v=1681372073557;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
+                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https://cdn0030.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/rohit__kumar_1.pdf?v=1692773095771;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
                                                                 style="width: 80px;  height: 80px;">                                                          </td>
 														   <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 														   
@@ -1149,7 +1149,7 @@ APPROVED THIS CERTIFICATE AS A VALID LEGAL DOCUMENT FOR ALL OFFICIAL PURPOSES".
                                                         <td>&nbsp;</td>-->
 
                           <td class="btn">
-                            <a class="btn" target="_blank" href=https://cdn03.qrcodechimp.com/qr/PRODe5/2073557/print">Print</a>                          </td>
+                            <a class="btn" target="_blank" href=https://cdn0030.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/rohit__kumar_1.pdf?v=1692773095771/print">Print</a>                          </td>
                           <td>&nbsp;</td>
                           <td class="btn">
                             <input class="btn" value="Home" type="button" onclick="document.location.href='https://crsorgi.gov.in/web/index.php/';" />                          </td>
